syntax = "proto3";

package ServersideStreamingRPC;

service Greeter {
    rpc SayList (HelloRequest) returns (stream HelloReply) {};
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}


